# AR4-NSGA-II-trajectory-planning-

./: CMakeLists.txt
matlab urdf and codes/: package.xml
matlab urdf and codes/launch/: display.launch  gazebo.launch
matlab urdf and codes/meshes/: link3.STL  link4.STL  link5.STL  link7.STL
matlab urdf and codes/urdf/: EE_XYZ_vs_Time.mat  Joint1_Trajectory_Smooth.mat  Joint2_Trajectory_Smooth.mat  Joint3_Trajectory_Smooth.mat  Joint5_Trajectory_Smooth.mat  Joint6_Trajectory_Worst.mat  Smoothest_JointInputs.mat  Worst_JointInputs.mat  Worst_Solution.mat  evaluate_objectives_constrained.m  main_pareto_with_kinematic_constraints.m  plot_and_animate.m  plot_joints_profiles.m
matlab urdf and codes/urdf/slprj/: AR4_robotv5.slx.original  B_SPLINE_JOINTS.m  Extracted_OPT_EE_path.m  Joint3_Trajectory_Worst.mat  Joint4_Trajectory_Worst.mat  Joint5_Trajectory_Worst.mat  Pareto_Objective_Table.csv  Pareto_Objective_Table.mat  Pareto_Objectives_AllJoints.mat  Smooth_JointInputs.mat  Smooth_Objective_Values.csv  Smoothest_Solution.mat  extractcorrectformat.m  plotxyz.m  simulate_multibody.m
matlab urdf and codes/urdf/slprj/_jitprj/: jitEngineAccessInfo.mat  s1CQCCQLjw1zkEif5SLFDjD.l  s1CQCCQLjw1zkEif5SLFDjD.mat  s57KEgOsjg5PobsRJgZM39B.l  s57KEgOsjg5PobsRJgZM39B.mat  s86lF9EjOOhIiZJdFC8n9aH.mat  sIZxrbySFN37BPNYA83RKTH.l  sIZxrbySFN37BPNYA83RKTH.mat  sLonj4jrNkpqWDisG5PFosG.l  sLonj4jrNkpqWDisG5PFosG.mat  sOGDXueyRi4r2NWHp6dk7LH.l  sOGDXueyRi4r2NWHp6dk7LH.mat  sQORi4ZyolNULDJdQetjNcH.l  sQORi4ZyolNULDJdQetjNcH.mat  sTIX0b3ZkfAaVA03NGkmrrD.l  sXJOFLrd7At0HWv6H67UtZC.l  (+6 more)
(+76 files in other folders)
